build/xtask/tests/snapshots/i2c_codegen__app_gimletlet_app-meanwell.toml.other-sensors-Sensors.snap
---
source: build/xtask/tests/i2c-codegen.rs
expression: contents
---
pub mod other_sensors {
    #[allow(unused_imports)]
    use super::super::SensorId;
    #[allow(dead_code)]
    pub const NUM_SENSORS: usize = 0;
}
