build/xtask/tests/snapshots/i2c_codegen__app_gimletlet_app-meanwell.toml.sensor-id-to-component-id-Sensors.snap
---
source: build/xtask/tests/i2c-codegen.rs
expression: contents
---
pub const MAX_SENSOR_COMPONENT_ID_LEN: usize = 0;
pub const SENSOR_ID_TO_COMPONENT_ID: [fixedstr::FixedStr<
    'static,
    MAX_SENSOR_COMPONENT_ID_LEN,
>; 0] = [];
