build/xtask/tests/snapshots/i2c_codegen__app_gimletlet_app-meanwell.toml.sensors-Sensors-desc.snap
---
source: build/xtask/tests/i2c-codegen.rs
expression: report.sensors.to_string()
---
by_device:
by_name:
by_refdes:
by_id:
device_sensors:
total_i2c_sensors: 0
other_sensors:
total_other_sensors: 0
