build/xtask/tests/snapshots/i2c_codegen__app_gimletlet_app-meanwell.toml.sensors-Sensors.snap
---
source: build/xtask/tests/i2c-codegen.rs
expression: contents
---
pub mod sensors {
    #[allow(unused_imports)]
    use super::super::SensorId;
    #[allow(dead_code)]
    pub const NUM_SENSORS: usize = 0;
}
