build/xtask/tests/snapshots/i2c_codegen__app_gimletlet_app-meanwell.toml.validation-Validation.snap
---
source: build/xtask/tests/i2c-codegen.rs
expression: contents
---
pub mod validation {
    #[allow(unused_imports)]
    use drv_i2c_api::{Controller, I2cDevice, PortIndex};
    #[allow(unused_imports)]
    use drv_i2c_devices::Validate;
    use userlib::TaskId;
    #[allow(dead_code)]
    pub enum I2cValidation {
        RawReadOk,
        Good,
        Bad,
    }
    #[allow(unused_variables)]
    #[allow(clippy::match_single_binding)]
    #[allow(unused_doc_comments)]
    pub fn validate(
        task: TaskId,
        index: usize,
    ) -> Result<I2cValidation, drv_i2c_api::ResponseCode> {
        match index {
            _ => Err(drv_i2c_api::ResponseCode::BadArg),
        }
    }
}
